# PrivateGate

./: pyproject.toml
docs/: policy_mapping_lookup.md
privategate/: cli.py  types.py
privategate/adversary/: base.py  embedding_inversion.py  llm_guesser.py  scorer.py
privategate/backends/: base.py  mock_secure.py  mock_standard.py
privategate/detector/: gazetteer.py  hybrid_detector.py  merge.py  ml_detector.py  risk.py  rule_detector.py  rules.py
privategate/eval/: adversarial_run.py  detector_f1.py  example.py  run.py
privategate/policy/: default_policy.yaml  engine.py  permissive_policy.yaml  strict_policy.yaml  table.py
privategate/reconstruct/: fuzzy_resolver.py  reconstructor.py  string_resolver.py
privategate/rewriter/: actions.py  placeholder_map.py  rewriter.py
privategate/router/: divergence.py  probe.py  router.py  trace.py
report/: report.md
scripts/: train_ml_detector.py
src/privategate/: __init__.py  pipeline.py  types.py
tests/: test_cli_ask.py  test_cli_rewrite.py  test_cli_smoke.py  test_smoke_e2e.py  test_types.py
tests/adversary/: test_embedding_inversion.py  test_llm_guesser.py  test_scorer.py
tests/backends/: test_mock_secure.py  test_mock_standard.py
tests/baselines/: __init__.py  always_he.py  always_plaintext.py  keyword_only.py  llm_judge.py  reference_r1r4.py  regex_only.py
tests/data/: __init__.py  annotation_guide.md  auto_label.py  compare_thinking.py  download.py  labeler.py  prepare_pilot.py  sample.py  schema.py  splice_boost.py  split_gold.py  synthesize_rare.py
tests/detector/: test_detect_api_key.py  (+13 more)
(+99 files in other folders)
