[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "privategate"
version = "0.1.0"
description = "Privacy-aware query gateway for LLM inference"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "faker>=20.0",
    "regex>=2023.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
ml = ["transformers>=4.30", "torch>=2.0"]

[project.scripts]
privategate = "privategate.cli:main"

[tool.setuptools.packages.find]
include = ["privategate*"]

[tool.setuptools.package-data]
"privategate.policy" = ["*.yaml"]
"privategate.eval.datasets" = ["*.jsonl", "fixtures/*.jsonl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
